examples/test/testpolicy3833.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3833
  namespace: namespace165
spec:
  podSelector:
    matchLabels:
      key37: value47
      key30: value22
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key28: value48
      podSelector:
        matchLabels:
          key12: value44
          key26: value38
